--- a/index.html
+++ b/index.html
@@ -304,21 +304,32 @@
           </div>
           <div class="carousel-item">
             <div class="container">
-              <img class="testimonio-imagen rounded-circle" src="imagenes/cliente2.svg" alt="Foto de Nora">
-              <p class="testimonio-texto">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vel iaculis urna. Fusce a ornare enim, vel interdum turpis. Sed aliquam interdum nisi a placerat.</p>
+              <img class="testimonio-imagen rounded-circle" src="imagenes/mayra.jpg" alt="Foto de Mayra Yépez">
+              <p class="testimonio-texto">Magali demostró ser una participante proactiva, colaboradora, entusiasta y con una  gran iniciativa para aprender durante el Bootcamp de Tecnolochicas PRO, dónde la conocí. 
+              Fue un placer trabajar con ella, la recomiendo ampliamente.</p>
               <div class="testimonio-info">
-                <p class="cliente">Nora</p>
-                <p class="cargo">Gerente de DiseñaMiPáginaWeb</p>
+                <p class="cliente">Mayra Yépez</p>
+                <p class="cargo">Programadora Front-end, estudiante de Ing. en  Tecnologías de la Información, área desarrollo de software multiplataforma.</p>
               </div>
             </div>
           </div>
           <div class="carousel-item">
             <div class="container">
-              <img class="testimonio-imagen rounded-circle" src="imagenes/cliente3.svg" alt="Foto de Leonardo">
-              <p class="testimonio-texto">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vel iaculis urna. Fusce a ornare enim, vel interdum turpis. Sed aliquam interdum nisi a placerat.</p>
+              <img class="testimonio-imagen rounded-circle" src="imagenes/shantal.jpg" alt="Foto de Shantal Eslava">
+              <p class="testimonio-texto">Magali ha demostrado ser no solamente ser una gran colega, si no también una excelente estudiante colaboradora durante el Bootcamp de Tecnolochicas PRO. Recomendada sin duda alguna.</p>
               <div class="testimonio-info">
-                <p class="cliente">Leonardo</p>
-                <p class="cargo">Director de AprendeAProgramar</p>
+                <p class="cliente">Shantal Eslava</p>
+                <p class="cargo">Programadora Front-end</p>
+              </div>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <div class="container">
+              <img class="testimonio-imagen rounded-circle" src="imagenes/monica.png" alt="Foto de Monica Vergara">
+              <p class="testimonio-texto">Magali es una compañera muy amigable y creativa, durante el Bootcamp de Tecnolochicas PRO demostró estar dispuesta a enfrentar nuevos retos y aprender, es adapatable y paciente. Altamente recomendable colaborar con ella.</p>
+              <div class="testimonio-info">
+                <p class="cliente">Monica Ivette Vergara</p>
+                <p class="cargo">Ing. Tecnologías de Cómputo y Telecomunicaciones</p>
               </div>
             </div>
           </div>
