--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
               <div class="overlay">
                 <p>Calculadora</p>
                 <div class="iconos-contenedor">
-                  <a href="https://github.com/" target="_blank" rel="noopener noreferrer">
+                  <a href="https://github.com/magaliggonzalezz/calculadora" target="_blank" rel="noopener noreferrer">
                     <i class="bi bi-github"></i>
                   </a>
                   <a href="#/" target="_blank" rel="noopener noreferrer">
