--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     <section id="sobre-mi" class="sobre-mi seccion-oscura">
       <div class="contenedor">
         <h2 class="seccion-titulo">Conoce a Magali González<sup>2</sup></h2>
-        <p class="seccion-texto">Soy estudiante de Ingeniería Telemática en la Unidad Interdisciplinaria en Ingeniería y Tecnologías Avanzadas del Instituto Politécnico Nacional. Actualmente estoy aprendiendo programación front-end en Tecnolochicas PRO.</p>
+        <p class="seccion-texto">Soy estudiante de Ingeniería Telemática en la Unidad Interdisciplinaria en Ingeniería y Tecnologías Avanzadas (UPIITA) del Instituto Politécnico Nacional (IPN). Actualmente estoy aprendiendo programación front-end en Tecnolochicas PRO.</p>
       </div>
     </section>
 
@@ -110,8 +110,7 @@
           <div class="columna col-12 col-md-6">
             <i class="bi bi-laptop"></i>
             <p class="experiencia-titulo">Estudiante</p>
-            <p>Soy estudiante de quinto semestre de 
-              Ingeniería Telemática en la Unidad Profesional Interdisciplinaria en Ingeniería y Tecnologías Avanzadas del IPN. </p>
+            <p>Soy estudiante de quinto semestre de Ingeniería Telemática en la Unidad Profesional Interdisciplinaria en Ingeniería y Tecnologías Avanzadas del IPN. </p>
             <div class="badges-contenedor">
               <span class="badge text-bg-secondary">Tecnolochicas PRO</span>
               <span class="badge text-bg-secondary">Front-end</span>
